--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -56,7 +56,7 @@
 
 .iconSmall {
     width: auto;
-    height: 50px;
+    height: 40px;
     margin-top: 6px;
     margin-bottom: 6px;
     margin-right: 6px;
@@ -66,4 +66,27 @@
 .toast {
     font-size: 18px !important;
     font-weight: 600;
+}
+
+/* custom scrollbar */
+::-webkit-scrollbar {
+    width: 20px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: rgb(51, 50, 50);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #d6dee1;
+    border-radius: 20px;
+    border: 6px solid transparent;
+    background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #a8bbbf;
+}
+
+body {
 }
